--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
 <head>
     <title>Marvel Wallpapers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>Marvel Wallpapers</h1>
-<p>My first GitHub website</p>
+
+<div class="gallery">
+    <img src="WhatsApp Image 2026-01-16 at 17.59.26.jpeg">
+    <img src="WhatsApp Image 2026-01-16 at 17.59.27.jpeg">
+    <img src="WhatsApp Image 2026-01-16 at 17.59.28.jpeg">
+</div>
 
 </body>
 </html>
