--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <img src="WhatsApp Image 2026-01-16 at 17.59.26.jpeg">
     <img src="WhatsApp Image 2026-01-16 at 17.59.27.jpeg">
     <img src="WhatsApp Image 2026-01-16 at 17.59.28.jpeg">
+     <img src="WhatsApp Image 2026-01-16 at 17.59.29.jpeg">
+    <img src="WhatsApp Image 2026-01-16 at 17.59.30.jpeg">
+    <img src="WhatsApp Image 2026-01-16 at 17.59.31.jpeg">
 </div>
 
 </body>
